[gd_scene load_steps=17 format=2]

[ext_resource path="res://heart.gd" type="Script" id=1]
[ext_resource path="res://Assets/Objects/heart1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Objects/heart2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Objects/heart3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Objects/heart4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Objects/heart5.png" type="Texture" id=6]
[ext_resource path="res://Assets/Objects/heart6.png" type="Texture" id=7]
[ext_resource path="res://Assets/Objects/heart7.png" type="Texture" id=8]
[ext_resource path="res://Assets/Objects/heart8.png" type="Texture" id=9]
[ext_resource path="res://Assets/Objects/heartparticle.png" type="Texture" id=10]
[ext_resource path="res://Assets/Animations/light.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "motion",
"speed": 7.0
} ]

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 6, 1, 1 )
flag_disable_z = true
spread = 136.29
gravity = Vector3( 0, 30, 0 )
initial_velocity = 14.35
initial_velocity_random = 0.8
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 3.82
linear_accel_random = 0.74
radial_accel = -20.09
radial_accel_random = 0.13

[sub_resource type="Animation" id=3]
resource_name = "pulsating"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.1 ),
"transitions": PoolRealArray( 1, 5.85636, 0.176776 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 2, 0, 1.3, 0.8 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 7.39174

[sub_resource type="Animation" id=5]
resource_name = "fade"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 238.856, 608.874, 3444.31, 1176.27, 1552.09, 119.428, 1351.18 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="heart" type="Area2D"]
collision_layer = 32768
script = ExtResource( 1 )

[node name="anim" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "motion"
frame = 2
playing = true

[node name="particles" type="Particles2D" parent="anim"]
show_behind_parent = true
position = Vector2( -0.231966, 0.695898 )
rotation = -3.14159
amount = 10
lifetime = 1.5
speed_scale = 0.6
process_material = SubResource( 2 )
texture = ExtResource( 10 )

[node name="light" type="Light2D" parent="anim/particles"]
texture = ExtResource( 11 )
texture_scale = 1.55
color = Color( 1, 0.129412, 0.556863, 1 )
energy = 1.2

[node name="pulsating" type="AnimationPlayer" parent="anim"]
anims/pulsating = SubResource( 3 )

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="anim2" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 5 )

[connection signal="body_entered" from="." to="." method="_on_heart_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
